subbing one task

--- a/lab/lab1/part1-types-variables-math.html
+++ b/lab/lab1/part1-types-variables-math.html
@@ -25,9 +25,8 @@
     var resultTask2 = (typeof b == 'string');
 
     var c;
-    var dataTask3 = ['peach', 'plum', 'pear'];
-    var resultTask3 = ('plum' == dataTask3[c]);
-
+    var resultTask3 = (c ** 2 == 25)
+    
     var d;
     var resultTask4 = (d == 'cassiopeia'.length);
 
