--- a/lab/lab1/part1-types-variables-math.html
+++ b/lab/lab1/part1-types-variables-math.html
@@ -18,19 +18,19 @@
 
     ===================== */
 
-    var a;
+    var a = 31;
     var resultTask1 = (a > 30);
 
-    var b;
+    var b = 'this';
     var resultTask2 = (typeof b == 'string');
 
-    var c;
+    var c = 5;
     var resultTask3 = (c ** 2 == 25)
-    
-    var d;
+
+    var d = 10;
     var resultTask4 = (d == 'cassiopeia'.length);
 
-    var e;
+    var e = 8;
     var resultTask5 = (e%5 == 3);
 
     /* =====================
