--- a/assignment/index.html
+++ b/assignment/index.html
@@ -6,10 +6,16 @@
   </head>
   <body>
     <!--left panel-->
-    <div style="position:fixed;left:0px;width:400px">
-    </div>
+    <!--<div style="position:fixed;left:0px;width:400px">
+    </div>-->
     <!--map-->
-    <div id="map" style="position:fixed;right:0px;left:400px;height:100%;">
+    <div id="map" style="
+      position:fixed;
+      top:0;
+      right:0px;
+      left:/*400px*/0;
+      height:100%;
+    ">
     </div>
 
     <!--javascript imports-->
@@ -62,10 +68,61 @@
 
       ===================== */
 
-      var jsonToCsv = function(json) { console.log(json); };
+      var jsonToCsv = function(json) {
+        let hc = [];
 
+        let keys = [];
+        for (let i = 0; i < json.length; i++) {
+          keys = keys.concat(Object.keys(json[i]));
+        }
+        keys = Array.from(new Set(keys));
+        hc.push(keys);
 
-      var addMarkers = function(map) {};
+        for (let i = 0; i < json.length; i++) {
+          let row = [];
+          for (let k = 0; k < keys.length; k++) {
+              row = row.concat(json[i][keys[k]]);
+          }
+          hc.push(row);
+        }
+
+        console.log(hc);
+      };
+
+      var addMarkers = function(map, json) {
+        for (let i = 0; i < json.length; i++) {
+          let loc = json[i];
+          if (loc["ZIP"] >= 19140 && loc["ZIP"] <= 19149) {
+            let dental = ' ';
+            let d_icon = L.Icon.Default.prototype;
+            if (loc["DENTAL_PHONE"] !== "N/A") {
+              dental = `Dental: ${loc["DENTAL_PHONE"]}<br>`;
+              d_icon = greenIcon;
+            }
+            let msg = `<strong>${loc["NAME"]}</strong><br>
+                       ${loc["ORGANIZATION"]} (<a href='${loc["WEBSITE"]}'>website</a>)<br>
+                       Phone: ${loc["PHONE"]}<br>
+                       ${dental}
+                       <br>
+                       ${loc["FULL_ADDRESS"]}<br>
+                       Philadelphia, PA ${loc["ZIP"]}`;
+            L
+              .marker([loc["LAT"],loc["LNG"]], {icon: d_icon})
+              .addTo(map)
+              .bindPopup(msg);
+
+          }
+        }
+      };
+
+      var greenIcon = new L.Icon({
+        iconUrl: 'https://cdn.rawgit.com/pointhi/leaflet-color-markers/master/img/marker-icon-green.png',
+        shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+        iconSize: [25, 41],
+        iconAnchor: [12, 41],
+        popupAnchor: [1, -34],
+        shadowSize: [41, 41]
+      });
 
       /* =====================
 
@@ -75,7 +132,7 @@
 
 
       jsonToCsv(healthCenters);
-      addMarkers(map);
+      addMarkers(map,healthCenters);
     </script>
     <!--Your code ends here-->
   </body>
